SourceMetaData/src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>SLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SLA requirement</description>
        <inlineHelpText>SLA requirement</inlineHelpText>
        <label>SLA Lookup</label>
        <referenceTo>SLA__c</referenceTo>
        <relationshipLabel>Goals</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Area__c</fullName>
        <label>Service Area</label>
        <picklist>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Specific_Service__c</fullName>
        <description>The specific service to which the ticket relates (controlled by department selected)</description>
        <inlineHelpText>The specific service to which the ticket relates (controlled by department selected)</inlineHelpText>
        <label>Specific Service</label>
        <picklist>
            <controllingField>Department__c</controllingField>
            <picklistValues>
                <fullName>Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Policy and Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scrutiny</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School based education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Children&apos;s social care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adult social care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer services</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Democratic and electoral services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fraud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revenues and benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Street care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leisure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Culture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adult and community education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ticket_Action_Details__c</fullName>
        <description>What Action the ticket corresponds to.</description>
        <inlineHelpText>What Action the ticket corresponds to.</inlineHelpText>
        <label>Ticket Action Details</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Working_Days_Elapsed__c</fullName>
        <description>Number of working days when the Case was opened or escalated</description>
        <inlineHelpText>Number of working days when the Case was opened or eesclated</inlineHelpText>
        <label>Working Days Elapsed</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>Administrators</fullName>
        <filterScope>Queue</filterScope>
        <label>Administrators</label>
        <queue>Administrators</queue>
        <sharedTo>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>SLA_Days_Remaining__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Opened_Date__c</columns>
        <columns>Created_Date__c</columns>
        <columns>Channel__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Cases</label>
    </listViews>
    <listViews>
        <fullName>All_CCC_Escalated_Goals</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>SLA_Days_Remaining__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Opened_Date__c</columns>
        <columns>Created_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Escalated</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.CCC</value>
        </filters>
        <label>All Escalated Cases</label>
    </listViews>
    <listViews>
        <fullName>All_CCC_Goals_from_Email</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>SLA_Days_Remaining__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Opened_Date__c</columns>
        <columns>Created_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.ORIGIN</field>
            <operation>equals</operation>
            <value>Email</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.CCC</value>
        </filters>
        <label>All CCC Cases from Email</label>
    </listViews>
    <listViews>
        <fullName>All_Complaints_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.CCC</value>
        </filters>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>contains</operation>
            <value>Complaint</value>
        </filters>
        <label>All Complaints Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Finance_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CSC_Case_Type__c</field>
            <operation>equals</operation>
            <value>Agresso Actions,Service,Queries and Training</value>
        </filters>
        <label>All Finance Cases</label>
    </listViews>
    <listViews>
        <fullName>All_ICT_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>SLA_Days_Remaining__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Opened_Date__c</columns>
        <columns>Created_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CSC_Case_Type__c</field>
            <operation>equals</operation>
            <value>Incident,Enquiry</value>
        </filters>
        <label>All ICT Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Open_CCC_Goals</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>SLA_Days_Remaining__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Opened_Date__c</columns>
        <columns>Created_Date__c</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.CCC</value>
        </filters>
        <label>All Open Cases</label>
        <sharedTo>
            <role>Customer_Contact_Centre_Support_Agent</role>
            <role>Customer_Contact_Centre_Support_Manager</role>
            <role>Customer_Relations_Support_Agent</role>
            <role>Customer_Relations_Support_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open_Complaints</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>SLA_Days_Remaining__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Opened_Date__c</columns>
        <columns>Created_Date__c</columns>
        <columns>Channel__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.CCC</value>
        </filters>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>contains</operation>
            <value>Complaint</value>
        </filters>
        <label>All Open Complaints</label>
        <sharedTo>
            <roleAndSubordinates>Customer_Contact_Centre_Support_Manager</roleAndSubordinates>
            <roleAndSubordinates>Customer_Relations_Support_Manager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open_Finance_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CSC_Case_Type__c</field>
            <operation>equals</operation>
            <value>Agresso Actions,Service,Queries and Training</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>All Open Finance Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Open_ICT_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CSC_Case_Type__c</field>
            <operation>equals</operation>
            <value>Incident,Enquiry</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>All Open ICT Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Information_Requests</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.STATUS</columns>
        <columns>SLA_Days_Remaining__c</columns>
        <columns>Opened_Date__c</columns>
        <columns>Created_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.CCC</value>
        </filters>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>contains</operation>
            <value>Information,FOI,RFI,EIR</value>
        </filters>
        <label>All Open Information Requests</label>
        <sharedTo>
            <role>Customer_Relations_Support_Agent</role>
            <role>Customer_Relations_Support_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Overdue_Goals</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>SLA_Days_Remaining__c</columns>
        <columns>Opened_Date__c</columns>
        <columns>Created_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>SLA Breached</value>
        </filters>
        <label>All Overdue Cases</label>
    </listViews>
    <listViews>
        <fullName>Corporate_Service_Centre_Caes</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.CSC</value>
        </filters>
        <label>Corporate Service Centre Cases</label>
    </listViews>
    <listViews>
        <fullName>Customer_Contact_CentreAgents</fullName>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Customer Contact Centre Agents</label>
        <queue>Customer_Contact_Centre_Agents</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>CCC</fullName>
        <active>true</active>
        <businessProcess>Goal Process</businessProcess>
        <description>A case as used by the Customer Contact Centre</description>
        <label>CCC</label>
    </recordTypes>
    <recordTypes>
        <fullName>CSC</fullName>
        <active>true</active>
        <businessProcess>Goal Process</businessProcess>
        <description>A case as used by the Corporate Services Centre</description>
        <label>CSC</label>
    </recordTypes>
    <validationRules>
        <fullName>Calendar_Days_Elapsed_only_Increased</fullName>
        <active>false</active>
        <description>Users with Permission Set LBH Support Manager can change number of Calendar Days Elapsed, but only to increase it</description>
        <errorConditionFormula>IF(SLA__r.Working_Days__c = TRUE &amp;&amp; 
IsReopenGoal__c = FALSE &amp;&amp; 
NOT (ISCHANGED( Active_SLA__c )) &amp;&amp; 
NOT (ISCHANGED( Continuous_Working_Days_on_Hold__c )) &amp;&amp; 
NOT (ISCHANGED( Status)) , 

Calendar_Days_Elapsed__c &lt;= PRIORVALUE( Calendar_Days_Elapsed__c ),
FALSE)</errorConditionFormula>
        <errorDisplayField>Calendar_Days_Elapsed__c</errorDisplayField>
        <errorMessage>Sorry, number of calendar days elapsed can only be increased</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Case_Must_have_a_summary_type</fullName>
        <active>true</active>
        <description>A case must have a type, or other summary or otherwise be a new draft blank email</description>
        <errorConditionFormula>AND(
$RecordType.Name &lt;&gt; &quot;CSC&quot;,
ISBLANK(TEXT(Goal_Type__c)),
ISBLANK(TEXT(Goal_Sub_Type__c)),
ISBLANK(TEXT(Popular_Goals__c)),
ISBLANK(Goal_Free_Text__c),
ISBLANK(SuppliedEmail)
)</errorConditionFormula>
        <errorDisplayField>Popular_Goals__c</errorDisplayField>
        <errorMessage>Please select what the goal is about</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cases_Cant_have_Parents</fullName>
        <active>true</active>
        <description>A Goal cannot have a parent</description>
        <errorConditionFormula>!ISBLANK(ParentId)</errorConditionFormula>
        <errorMessage>A goal cannot have a parent case.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cases_Must_have_contact_or_anonymous</fullName>
        <active>true</active>
        <description>A case must either have a selected contact, or marked as anonymous</description>
        <errorConditionFormula>(!ISBLANK(ContactId) &amp;&amp; Anonymous_Customer__c == true)</errorConditionFormula>
        <errorDisplayField>ContactId</errorDisplayField>
        <errorMessage>A goal must either have a selected contact, or marked as anonymous</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OpenedDate_not_in_Future</fullName>
        <active>true</active>
        <description>Opened Date can not be the future date</description>
        <errorConditionFormula>Opened_Date__c &gt; TODAY ()</errorConditionFormula>
        <errorMessage>Please set Opened Date as today or earlier. Opened Date can not be a future date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status_not_reversed_to_Draft</fullName>
        <active>true</active>
        <description>Goal status can not be reversed to be in Draft status once it has been Opened.</description>
        <errorConditionFormula>AND(ISCHANGED(Status), ISPICKVAL(Status, &quot;Draft&quot;))</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>Status can not be reversed to Draft</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Working_Days_Elapsed_Only_Increased</fullName>
        <active>false</active>
        <description>Users with Permission Set LBH Support Manager can change number of Working Days Elapsed, but only to increase it</description>
        <errorConditionFormula>IF(  SLA__r.Working_Days__c = TRUE &amp;&amp; 
    IsReopenGoal__c = FALSE &amp;&amp;
   NOT ( ISCHANGED( Active_SLA__c ) &amp;&amp; 
   NOT (ISCHANGED( Continuous_Working_Days_on_Hold__c ) &amp;&amp;
    NOT ( ISCHANGED(Status) ) )),

Working_Days_Elapsed__c &lt;= PRIORVALUE(Working_Days_Elapsed__c),
FALSE)</errorConditionFormula>
        <errorDisplayField>Working_Days_Elapsed__c</errorDisplayField>
        <errorMessage>Sorry, number of working days elapsed can only be increased</errorMessage>
    </validationRules>
</CustomObject>